Fixing certification pages on mobile

--- a/docroot/sites/all/themes/son/sass/blocks.scss
+++ b/docroot/sites/all/themes/son/sass/blocks.scss
@@ -332,7 +332,7 @@
     width: 180px;
     height: 205px;
   }
-  
+
   .featured-project-examples-pager-left,
   .featured-project-examples-pager-right {
     position: absolute;
@@ -370,7 +370,7 @@
     background-position: -18px 0;
   }
   .featured-project-examples-pager-right-inner:hover {
-    background-position: -54px 0;    
+    background-position: -54px 0;
   }
 
   .pager {
@@ -422,7 +422,8 @@
 
 .certifications {
   .group-left {
-    width: 25%;
+    width: 22%;
+    padding-right: 20px;
   }
   .group-right {
     width: 75%;
